--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "data:import": "node backend/seeder.js",
+    "data:destroy": "node backend/seeder.js -d"
   },
   "repository": {
     "type": "git",
@@ -21,10 +23,14 @@
   },
   "homepage": "https://github.com/Russ-S/Music_Collection_2024#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "express": "^4.18.2",
+    "mongoose": "^7.6.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.1",
+    "dotenv": "^16.3.1",
     "nodemon": "^3.0.1"
   }
 }
